Make sure images cannot be bigger than page on small devices, regardless of image view config settings

--- a/Skins/Kartris/general.css
+++ b/Skins/Kartris/general.css
@@ -168,8 +168,8 @@ div.errortext                           { font-style: normal; font-size: 13px; d
 IMAGES
 ========================================================================
 */
-.imageholder                            { display: block; text-align: center; }
-.imageholder img                        { margin: 0; padding: 0; }
+.imageholder                            { display: block; text-align: center; max-width: 90vw; max-height: 90vw; }
+.imageholder img                        { margin: 0; padding: 0; max-width: 100%; max-height: 100%; }
 .imageviewer                            { text-align: center; }
 .imageviewer .gallery                   { padding: 0; width: 100%; text-align: left; }
 .imageviewer .gallery .scrollarea       { display: inline-block }
